[tool.poetry]
name = "lushlayers"
version = "0.4.0"
description = "Turn your keyboard into hot lasagna."
authors = ["Matteo De Wint <matteo@mailfence.com>"]
packages = [{ include = "lushlayers" }]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mdwint/lushlayers"
keywords = ["keyboard", "hotkeys", "karabiner-elements"]

[tool.poetry.scripts]
lushlayers = "lushlayers.__main__:main"

[tool.poetry.dependencies]
pydantic = "^2.1.1"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
bump2version = "^1.0.1"
coverage = "^7.3.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
